# haskell.nix

./: COPYING  README.md  bors.toml  changelog.md  ci.nix  default.nix  flake.nix  hackage-src.json  mkdocs.yml  stackage-src.json
builder/: default.nix
compiler/ghc/: default.nix
docs/: SUMMARY.md  architecture.md  tbco-nix.md  tests.sh  troubleshooting.md
docs/dev/: installing-nix-tools.md  maintainer-scripts.md  manually-generating-nix-expressions.md  nix-tools-pin.md
docs/reference/: commands.md  library.md  supported-ghc-versions.md
docs/template/: tbco-nix.md
docs/tutorials/: building-package-from-stackage-hackage.md  clean-git.md  cross-compilation.md  development.md  getting-started-flakes.md  getting-started-hix.md  getting-started.md  hackage-stackage.md  materialization.md  pkg-map.md  source-repository-hashes.md
hix/: default.nix
hix/init/: flake.nix
hix/project/: flake.nix
lib/: cabal-licenses.nix  call-cabal-project-to-nix.nix  clean-source-with.nix  cover-project.nix
mk-local-hackage-repo/: default.nix
modules/: configuration-nix.nix  hackage-quirks.nix
nix-tools/: flake.nix
nix-tools/.buildkite/: fixed.nix  nix-tools-build.sh
nix-tools/plan2nix/: Plan2Nix.hs
overlays/: bootstrap.nix  cabal-pkg-config.nix  ghc-packages.nix  hackage-quirks.nix  mingw_w64.nix  musl.nix  windows.nix
scripts/: check-hydra.nix  git.env  options-doc.nix  update-docs.nix  update-external.nix  update-hackage.nix  update-pins.nix  update-stackage.nix
test/: tests.sh  unit.nix
test/buildable/: buildable-test.cabal
test/exe-only/: exe-only.cabal
(+46 files in other folders)
